actualización de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         .hero {
             height: 100vh;
             background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)),
-                url('/public/img/porty-port.jpeg');
+                url('img/porty-port.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -283,10 +283,10 @@
     </section>
 
     <div class="gallery-preview">
-        <div class="gallery-item" style="background-image: url('/public/img/ropero-de-cedro.jpg');"></div>
-        <div class="gallery-item" style="background-image: url('//public/img/sillas-sencillas.jpg');"></div>
-        <div class="gallery-item" style="background-image: url('/public/img/cama-sencilla.png');"></div>
-        <div class="gallery-item" style="background-image: url('/public/img/comedor-rustico-imagen.jpeg');"></div>
+        <div class="gallery-item" style="background-image: url('img/ropero-de-cedro.jpg');"></div>
+        <div class="gallery-item" style="background-image: url('img/sillas-sencillas.jpg');"></div>
+        <div class="gallery-item" style="background-image: url('img/cama-sencilla.png');"></div>
+        <div class="gallery-item" style="background-image: url('img/comedor-rustico-imagen.jpeg');"></div>
     </div>
 
     <section class="section" id="servicios">
@@ -299,7 +299,7 @@
         <div class="services-grid">
             <div class="service-card">
                 <div class="image">
-                    <img style="width: 100%;" src="/public/img/Fabricación.jpg" alt="Fabricación">
+                    <img style="width: 100%;" src="img/Fabricación.jpg" alt="Fabricación">
                 </div>
                 <h3>Fabricación a Medida</h3>
                 <p>Diseñamos y creamos piezas únicas desde cero: roperos de cedro, comedores robustos y cocinas
@@ -312,7 +312,7 @@
 
             <div class="service-card" style="border-top: 4px solid var(--primary);">
                 <div class="image">
-                    <img style="width: 100%;" src="/public/img/Reparación.jpg" alt="Reparación">
+                    <img style="width: 100%;" src="img/Reparación.jpg" alt="Reparación">
                 </div>
                 <h3>Reparación Estructural</h3>
                 <p>¿Tu mueble favorito está dañado? Reparamos estructuras, reforzamos sillas y mesas, y solucionamos
@@ -325,7 +325,7 @@
 
             <div class="service-card">
                 <div class="image">
-                    <img style="width: 100%;" src="/public/img/Mantenimiento.jpg" alt="Mantenimiento">
+                    <img style="width: 100%;" src="img/Mantenimiento.jpg" alt="Mantenimiento">
                 </div>
                 <h3>Mantenimiento y Acabados</h3>
                 <p>Especialistas en laqueado, barnizado y pulido premium. Aplicamos tratamientos protectores que
