--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="/public/logo-carpentry.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/logo-carpentry.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         :root {
