--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Carpintería Oruna | Arte en Madera</title>
+
+    <meta name="description"
+        content="En Carpintería Oruna ofrecemos diseño exclusivo, calidad y durabilidad garantizada en cada pieza. Expertos en fabricación y restauración de muebles.">
+    <meta name="keywords"
+        content="carpintería, muebles a medida, restauración de muebles, madera, diseño exclusivo, Huanchilca - Chillia">
+
+    <meta property="og:title" content="Carpintería Oruna | Arte en Madera">
+    <meta property="og:description"
+        content="Diseño exclusivo, calidad y durabilidad garantizada. Expertos en fabricación y restauración de muebles de alta calidad.">
+    <meta property="og:image" content="https://www.carpinteriaoruna.com/img/logo-carpentry.png">
+    <meta property="og:url" content="https://www.carpinteriaoruna.com">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Carpintería Oruna | Arte en Madera">
+    <meta name="twitter:description" content="Diseño exclusivo, calidad y durabilidad garantizada.">
+    <meta name="twitter:image" content="https://www.carpinteriaoruna.com/img/logo-carpentry.png">
+
     <title>Carpintería Oruna | Arte en Madera</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="img/logo-carpentry.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-carpentry.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         :root {
@@ -294,7 +314,7 @@
         </h2>
         <p
             style="color: var(--primary); font-weight: bold; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 50px;">
-            Especialistas en Madera de Cedro y Finos Acabados</p>
+            Especialistas en Madera de Cedro y otros Acabados</p>
 
         <div class="services-grid">
             <div class="service-card">
@@ -341,8 +361,8 @@
     <section id="contacto" class="contact-area">
         <h2>¿Listo para empezar tu proyecto?</h2>
         <p style="margin-bottom: 25px;">Hablemos de tus ideas y hagámoslas realidad.</p>
-        <a href="https://wa.me/976299818" target="_blank" class="cta-main" style="background: white; color: var(--primary);"><i
-                class="bi bi-whatsapp"></i> Escríbenos
+        <a href="https://wa.me/976299818" target="_blank" class="cta-main"
+            style="background: white; color: var(--primary);"><i class="bi bi-whatsapp"></i> Escríbenos
             por WhatsApp</a>
     </section>
 
@@ -351,7 +371,7 @@
             <div class="ubication">
                 <h3>ADDRESS:</h3>
                 <div class="redes">
-                     <div class="redes-i">
+                    <div class="redes-i">
                         <a href="https://maps.app.goo.gl/jaSjTxDTDeFe7e3t7"><i class="bi bi-geo-alt-fill g"></i></a>
                     </div>
                     ANEXO HUANCHILCA - CHILIA - PATAZ
