--- a/public/index.html
+++ b/public/index.html
@@ -285,6 +285,7 @@
             margin-bottom: 10px;
         }
     </style>
+    <meta name="google-site-verification" content="WPwDTTC681vcJxU59kpdW30kR_YmQ87nPDUcl8iTziM" />
 </head>
 
 <body>
